drawing Notes lists to page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <main class="container-fluid">
     <p class="p-1 fs-3">Jot..</p>
     <div class="row justify-content-center pageCard">
-      <div class="col-4 cardlist">
+      <section class="col-4 cardlist">
         <div class="m-1 bg-card activeCard">
           <p class="text-end">Total Jots</p>
 
@@ -34,26 +34,52 @@
             <p class="ps-3 text-muted">add a Jot</p>
             <form action="" class="d-flex align-items-center justify-content-evenly">
               <div>
-                <input class="rounded" type="color">
+                <input class="rounded" type="color" name="color">
               </div>
               <div class="mx-2">
-                <input type="text" class="form-control" id="Title" name="Title" placeholder="name of Jot" minlength="3"
+                <input type="text" class="form-control" id="name" name="name" placeholder="name of Jot" minlength="3"
                   maxlength="12">
               </div>
               <button class="btn btn-primary">Create</button>
             </form>
           </div>
+          <hr class="bg-muted">
 
 
+
+
+
+          <div id="notesList">
+
+            <div class="sidebar">
+              <div class="d-flex justify-content-between">
+                <h3>CSS Tricks</h3>
+                <time>8/30/24</time>
+              </div>
+              <div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid, culpa similique facilis sit hic
+                  repellendus minima sequi? Esse perspiciatis sint nam maiores reiciendis culpa repudiandae at,
+                  similique porro tempore id.
+                </p>
+              </div>
+
+            </div>
+
+
+
+          </div>
         </div>
 
 
-      </div>
-      <div class="col-8">
+
+      </section>
+
+
+      <section class="col-8">
         <div class="m-1 bg-card activeCard">
           <h1>Active Jots</h1>
         </div>
-      </div>
+      </section>
     </div>
   </main>
 
