moked up active card template

--- a/index.html
+++ b/index.html
@@ -75,10 +75,37 @@
       </section>
 
 
-      <section class="col-8">
+      <section id="activeCard" class="col-8">
+
         <div class="m-1 bg-card activeCard">
-          <h1>Active Jots</h1>
+          <!-- <div class="p-3">
+            <div class="mb-3" style="border-left: 2px solid blue;">
+              <div class="ms-2">
+                <h1>CSS Tricks</h1>
+              </div>
+              <div class="container-fluid h-100">
+                <div class="row justify-content-between">
+
+                  <div class="col-5">
+                    <p class="ms-2">Created on:</p>
+                    <p class="ms-2">Last updated:</p>
+                  </div>
+                  <div class="col-5 text-center">
+                    <button class="mx-1 btn btn-outline-danger"><i class="mdi mdi-trash-can"></i>Delete</button>
+                    <button class="mx-1 btn btn-primary"><i class="mdi mdi-content-save-check-outline"></i>Save</button>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
+            <div class="row activeText">
+              <textarea class="rounded bg-card text-muted" name="" id=""></textarea>
+
+            </div>
+          </div> -->
         </div>
+
       </section>
     </div>
   </main>
