--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
       </section>
 
 
-      <section id="activeCard" class="col-8">
+      <section class="col-8">
 
-        <div class="m-1 bg-card activeCard">
+        <div id="activeCard" class="m-1 bg-card activeCard">
           <!-- <div class="p-3">
             <div class="mb-3" style="border-left: 2px solid blue;">
               <div class="ms-2">
