--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
           <p class="text-end">Total Jots</p>
           <div>
             <p class="ps-3 text-muted">add a Jot</p>
-            <form onsubmit="" class="d-flex align-items-center justify-content-evenly">
+            <form onsubmit="app.NotesController.createNote()" class="d-flex align-items-center justify-content-evenly">
               <div>
-                <input class="rounded" type="color" name="color">
+                <input class="rounded" type="color" name="color" required>
               </div>
               <div class="mx-2">
                 <input type="text" class="form-control" id="name" name="name" placeholder="name of Jot" minlength="3"
-                  maxlength="12">
+                  maxlength="12" required>
               </div>
               <button class="btn btn-primary" type="submit">Create</button>
             </form>
