--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <input class="rounded" type="color" name="color" required>
               </div>
               <div class="mx-2">
-                <input type="text" class="form-control" id="name" name="name" placeholder="name of Note" minlength="3"
-                  maxlength="15" required>
+                <input type="text" class="form-control input-name" id="name" name="name" placeholder="name of Note"
+                  minlength="3" maxlength="15" required>
               </div>
               <button class="btn btn-primary" type="submit">Create</button>
             </form>
@@ -96,6 +96,8 @@
 
   <!-- SECTION -->
   <footer class="">
+
+
 
   </footer>
 
